--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
       </div>
     </nav>
-    <h1>Welcome To PWA INSTALL</h1>
+    <h1>Welcome To PWA INSTALL with icon icon icon</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic animi similique ad repudiandae in, optio magnam dolores aut quia iure sed, ducimus nisi asperiores, minus impedit fugit? Fuga, iste illum.</p>
   
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" ></script>
